--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button>Log in</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="app.js"></script>
+    <script src="js/greetings.js"></script>
+    <script src="js/clock.js"></script>
 </body>
 </html>
