--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <Span></Span>
         <span></span>
     </div>
+    
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
 </body>
 </html>
