--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <Span></Span>
         <span></span>
     </div>
-    
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
